name = rsnake
version = 0.1.0
description = Random moving snake across the terminal using python and curses.
long_description = file: README.md
long_description_content_type = text/markdown
url =
author = Chad Larson
license = MIT
license_file = LICENSE

[options]
py_modules = rsnake
python_requires = >= 3.7

[options.entry_points]
console_scripts =
    rsnake = rsnake:main